5 - atomized the form

--- a/5 - XD Bonus Calculator/src/templates/pages/index.hbs
+++ b/5 - XD Bonus Calculator/src/templates/pages/index.hbs
@@ -4,5 +4,5 @@ heading: 'Welcome!'
 ---
 <div class="jumbotron">
     <h1>{{ heading }}</h1>
-    <p>This is just a test page. I'm not sure what content should go here, as the only purpose of this page is to provide a landing point for future pages. Just click something in the navbar.</p>
+    <p>{{ site.description }}</p>
 </div>
