--- a/5 - XD Bonus Calculator/src/templates/partials/table-bonus-results.hbs
+++ b/5 - XD Bonus Calculator/src/templates/partials/table-bonus-results.hbs
@@ -1,5 +1,5 @@
 ---
-component: table
+organism: table
 ---
 
 <div class="table-responsive">
@@ -8,13 +8,12 @@ component: table
             <tr>
                 <td></td>
                 <td colspan="2" class="info text-center">Potential</td>
-                <td colspan="3" class="text-center">Actual</td>
+                <td colspan="2" class="text-center">Actual</td>
             </tr>
             <tr class="active">
                 <td>Performance Measures</td>
                 <td class="text-center">% Allocation</td>
                 <td class="text-right">Potential Bonus</td>
-                <td class="text-center">Score</td>
                 <td class="text-center">Factors (% of potential)</td>
                 <td class="text-right">Bonus Earned</td>
             </tr>
@@ -23,34 +22,30 @@ component: table
             <tr>
                 <td>Billable Hours</td>
                 <td class="info text-center">50%</td>
-                <td class="info text-right">$812.50</td>
-                <td class="text-center">850 hrs</td>
-                <td class="text-center">87.5%</td>
-                <td class="text-right">$710.94</td>
+                <td class="billable-potential info text-right">$0.00</td>
+                <td class="billable-factors text-center">0%</td>
+                <td class="billable-actual text-right">$0.00</td>
             </tr>
             <tr>
                 <td>Delivery Success</td>
                 <td class="info text-center">20%</td>
-                <td class="info text-right">$325.00</td>
-                <td class="text-center">M+</td>
-                <td class="text-center">75%</td>
-                <td class="text-right">$243.75</td>
+                <td class="delivery-potential info text-right">$0.00</td>
+                <td class="delivery-factors text-center">0%</td>
+                <td class="delivery-actual text-right">$0.00</td>
             </tr>
             <tr>
                 <td>Int Contributions</td>
                 <td class="info text-center">30%</td>
-                <td class="info text-right">$487.50</td>
-                <td class="text-center">1</td>
-                <td class="text-center">100%</td>
-                <td class="text-right">$487.50</td>
+                <td class="contributions-potential info text-right">$0.00</td>
+                <td class="contributions-factors text-center">0%</td>
+                <td class="contributions-actual text-right">$0.00</td>
             </tr>
             <tr>
                 <td></td>
                 <td class="info"></td>
-                <td class="info text-right">$1,625.00</td>
+                <td class="total-potential info text-right">$0.00</td>
                 <td></td>
-                <td></td>
-                <td class="text-right">$1,442.19</td>
+                <td class="total-actual text-right">$0.00</td>
             </tr>
         </tbody>
     </table>
