--- a/5 - XD Bonus Calculator/src/templates/layouts/default.hbs
+++ b/5 - XD Bonus Calculator/src/templates/layouts/default.hbs
@@ -35,5 +35,6 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{assets}}/js/bootstrap.min.js"></script>
+    <script src="{{assets}}/js/calculate.js"></script>
   </body>
 </html>
